# CPU-emulator

./: .gitignore  README.md
doc/: CPU_emulator_block_diagram.xml  SPECIFICATIONS.md
src/: .assembler.cpp.swp  .cu.cpp.swp  CMakeLists.txt  CpuEmulatorConfig.h.in  alu.cpp  alu.hpp  assembler.cpp  assembler.hpp  bus.cpp  bus.hpp  clock.cpp  clock.hpp  cpu.cpp  cpu.hpp  cu.cpp  cu.hpp  instruction_reg.cpp  instruction_reg.hpp  instructions.hpp  main.cpp  ram.cpp  ram.hpp  register.cpp  register.hpp
test/: test.asm
