cmake_minimum_required (VERSION 2.6)
project(CPU-Emulator)
set (CPU-Emulator_VERSION_MAJOR 0)
set (CPU-Emulator_VERSION_MINOR 1)
add_compile_options(-Wall -Wextra -Wpedantic -g -o3)
project (CpuEmulator)
add_executable(CpuEmulator main.cpp cpu.cpp alu.cpp cu.cpp ram.cpp bus.cpp register.cpp instruction_reg.cpp clock.cpp)
